syntax = "proto3";

package user;

option go_package = ".";

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    User user = 1;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string phone = 3;
    string address = 4;
}

message CreateUserResponse {
    string user_id = 1;
}

message UpdateUserRequest {
    string user_id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    string address = 5;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string user_id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}

message ListUsersRequest {
    string filter = 1;
    string sort = 2;
    int32 page = 3;
    int32 page_size = 4;
}

message ListUsersResponse {
    repeated User users = 1;
    int32 total_pages = 2;
    int32 current_page = 3;
}

message User {
    string user_id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    string address = 5;
}
